Gui : fixed overflow of html page to scroll automatically.

--- a/modules/gui/constellation/src/main/webapp/resources/css/login.css
+++ b/modules/gui/constellation/src/main/webapp/resources/css/login.css
@@ -1,7 +1,4 @@
-html{
-    overflow-y:hidden;
-    overflow-x:hidden;
-}
+
 
 
 /* Show only to IE PC \*/
